--- a/index.html
+++ b/index.html
@@ -190,5 +190,12 @@
     
 </body>
 </html>
-<!--  il reste a changer le menu quand la taille est différente
-  faire en sorte que le mécaniste de prix function avec le label! surment autre choses que je pense pas -->
+<!--
+<footer> Source:
+ Utilisation de google AI https://www.google.com/search?sourceid=chrome&udm=50&aep=42 pour compréention ou aide a l'écrit (répétition)
+
+https://www.w3schools.com/ (html css javascript)
+
+https://developer.mozilla.org/en-US/docs/Web/HTML (html css javascript)
+</footer>
+ -->
